--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <!-- Halaman pertama: Login -->
 <div id="page1" class="content">
-    <h1>Hi Fi ^^ Wanna ask you somthing in a different way</h1>
+    <h1>Hi Fi ^^ Wanna ask you something in a different way</h1>
     <div>
         <label for="id">Surname (4 digits lowercase):</label><br>
         <input type="text" id="id" maxlength="4"><br>
