--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 <!-- Halaman keempat: Yippie! I’ll pick you up after work -->
 <div id="page4" class="content hidden">
     <h1>Yippie! I’ll pick you up after work</h1>
-    <img src="https://media.tenor.com/U5BGC4QLHQAAAAAi/peach-and-goma-peach-goma.gif"><br><br>
+    <img src="https://media.tenor.com/U5BGC4QLHQAAAAAi/peach-and-goma-peach-goma.gif" width="300"><br><br>
     <button onclick="goBack(2)">Home</button>
 </div>
 
 <!-- Halaman kelima: A'right, hmu on my WhatsApp to discuss about it ^^ -->
 <div id="page5" class="content hidden">
     <h1>A’right, hmu on my WhatsApp to discuss about it ^^</h1>
-    <img src="https://media.tenor.com/cq1P9YKxOJcAAAAi/%E6%91%87%E6%91%86-peach-cat-and-goma.gif"><br><br>
+    <img src="https://media.tenor.com/cq1P9YKxOJcAAAAi/%E6%91%87%E6%91%86-peach-cat-and-goma.gif" width="300"><br><br>
     <button onclick="goBack(2)">Home</button>
 </div>
 
