--- a/index.html
+++ b/index.html
@@ -167,5 +167,28 @@
     }
 </script>
 
+<script>
+    function sendChoice(choice) {
+        fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbzOLJZyXaL6HIhl5uiaOOIrGsjr9OpMWPkb0gQfobE27euJhkHQ4UsHeit0Ixf9ycTa/exec/exec?choice=" + choice)
+            .then(response => response.text())
+            .then(data => console.log("Pilihan tersimpan:", choice))
+            .catch(error => console.error("Error:", error));
+    }
+
+    function nextPage(page, choice) {
+        if (choice) {
+            sendChoice(choice); // Kirim data sebelum berpindah halaman
+        }
+
+        document.getElementById("page2").classList.add("hidden");
+        document.getElementById("page3").classList.add("hidden");
+        document.getElementById("page4").classList.add("hidden");
+        document.getElementById("page5").classList.add("hidden");
+        document.getElementById("errorPage").classList.add("hidden");
+
+        document.getElementById("page" + page).classList.remove("hidden");
+    }
+</script>
+    
 </body>
 </html>
