--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h2>Valentine's Day is coming up</h2>
     <h2>I'd love to spend a quiet evening with you after work. Are you interested?</h2>
     <img src="https://media.tenor.com/eX1d6fukpNQAAAAi/begging-cat-cat.gif" width="300"><br><br>
-    <button id="yesButton" onclick="nextPage(3)">Yes</button>
+    <button id="yesButton" onclick="nextPage(3, 'Yes')">Yes</button>
     <button id="noButton" onclick="moveButton()" onmouseover="moveButton()">No</button>
 </div>
 
@@ -99,8 +99,8 @@
     <h2>Yeay! But it's Friday 14th, and the next day you have a competition.</h2>
     <h2>Is it okay?</h2>
     <img src="https://media.tenor.com/1QR1IU5NfkcAAAAi/cute-cats.gif" width="300"><br><br>
-    <button onclick="nextPage(4)">Sure!</button>
-    <button onclick="nextPage(5)">Reschedule</button><br><br>
+    <button onclick="nextPage(4, 'Sure')">Sure!</button>
+    <button onclick="nextPage(5, 'Reschedule')">Reschedule</button><br><br>
     <button onclick="goBack(2)">Back</button>
 </div>
 
